--- a/src/app/pages/create-post/create-post.component.html
+++ b/src/app/pages/create-post/create-post.component.html
@@ -5,8 +5,8 @@
     <input type="text" id="title" required [(ngModel)]="newPost.title" name="title">
   </div>
   <div>
-    <label for="body">Body</label>
-    <textarea id="body" required [(ngModel)]="newPost.body" name="body"></textarea>
+    <label for="text">text</label>
+    <textarea id="text" required [(ngModel)]="newPost.text" name="text"></textarea>
   </div>
   <div>
     <label for="author">Author</label>
