--- a/src/app/pages/post-details/post-details.component.html
+++ b/src/app/pages/post-details/post-details.component.html
@@ -1,12 +1,11 @@
 
 <app-header></app-header>
 
-<h2>{{ post.title }}</h2>
-<h3>{{post.text}}</h3>
 
-<h4>Escrito por {{post.author}}</h4>
-<h5>{{post.publishDate}}</h5>
-
+<h2>{{ post?.title }}</h2>
+<h3>{{ post?.text }}</h3>
+<h4>Escrito por {{post?.author}}</h4>
+<h5>{{post?.publishDate}}</h5>
 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorem neque ad culpa ex placeat beatae, nobis, temporibus unde fugiat nostrum harum aspernatur id odio consequuntur! Nulla labore pariatur aperiam odit.
 Recusandae laboriosam hic neque ullam autem doloremque dolorum ratione consequatur, porro vero at tenetur magnam aliquam. Labore exercitationem eum dolorum. Error nemo atque iure, dolore dolorem corporis necessitatibus quibusdam molestias.
 Officia dolores, at deleniti architecto numquam ipsam laborum cum. Dicta deserunt aliquid molestiae nulla totam ullam dignissimos sint, voluptates inventore, rerum reiciendis placeat possimus odit, ipsum excepturi aperiam dolorem expedita.
