--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,5 +1,5 @@
 <header class="header">
-    <h1>My Blog</h1>
+    <h1 class="blog-title"> Tech blog</h1>
     <nav>
         <ul class="nav-list">
             <li><a class="link" routerLink ="/">Home</a></li>
