--- a/src/app/pages/post-list/post-list.component.html
+++ b/src/app/pages/post-list/post-list.component.html
@@ -2,7 +2,9 @@
 <div class="container">
   <ul *ngIf="posts.length > 0; else noPosts">
     <li *ngFor="let post of posts; trackBy: trackById">
-    <a routerLink="/detail-post, post.id"> <h2>{{ post.id }} - {{ post.title }}</h2> </a> 
+      <a [routerLink]="['/post', post.id]">
+        <h2 class="post-title">{{ post.id }} - {{ post.title }}</h2>
+      </a>
       <h3>{{ post.text }}</h3>
       <h4>{{ post.author }}</h4>
       <p>{{ post.publishDate }}</p>
